# fitter

./: README.md  base_exceptions.py  fit.py  function_list.py  main.py  pyproject.toml
functions/: base_function.py  constant.py  function_info.py  function_parameters.py  gaussian.py  gen_function_list.py  predefined_functions.py
grapihx/: base_gfx.py
grapihx/cui/: command_parser.py  cui_gfx.py
grapihx/cui/commands/: add_command.py  base_command.py  fit_command.py  help_command.py  plot_command.py  quit_command.py  remove_command.py  save_command.py  set_command.py  set_data_command.py  show_info_command.py
grapihx/cui/exceptions/: exception.py
grapihx/gui/: Parameter_block.py  gui_gfx.py  parameter_block.py
utils/: enum_parser.py  sample_generator.py
